Update title in index.html and refactor multiplication logic in logic.js

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.6">
-    <title>Document</title>
+    <title>Basic Calculator</title>
     <script src="./main.js" type="module" defer></script>
     <link rel="stylesheet" href="./src/style/style.css">
     <link rel="stylesheet" href="./src/style/reset.css">
